--- a/package.json
+++ b/package.json
@@ -1,12 +1,28 @@
 {
   "scripts": {
-    "watch": "shadow-cljs watch :app\n"
-  },
-  "devDependencies": {
-    "shadow-cljs": "^2.19.2"
+    "shadow:watch": "shadow-cljs watch app",
+    "shadow:release": "shadow-cljs release app",
+    "postcss:build": "cross-env TAILWIND_MODE=build postcss src/css/tailwind.css -o ./public/css/main.css --verbose",
+    "postcss:watch": "cross-env TAILWIND_MODE=watch postcss src/css/tailwind.css -o ./public/css/main.css --verbose -w",
+    "postcss:release": "cross-env NODE_ENV=production postcss src/css/tailwind.css -o ./public/css/main.css --verbose",
+    "dev": "run-p -l *:watch",
+    "release": "run-s *:release"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.2",
+    "@tailwindcss/forms": "^0.5.3",
+    "create-react-class": "15.7.0",
+    "cross-env": "^7.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
+  },
+  "devDependencies": {
+    "shadow-cljs": "^2.19.2",
+    "autoprefixer": "^10.4.13",
+    "cssnano": "^5.1.14",
+    "npm-run-all": "^4.1.5",
+    "postcss": "^8.4.19",
+    "postcss-cli": "^10.0.0",
+    "tailwindcss": "^3.2.4"
   }
 }
